--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
+    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "uuid": "^8.3.0"
