--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "redux-mock-store": "^1.5.4",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "serve": "^11.3.2",
     "uuid": "^8.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
